--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
-    "@vis.gl/react-google-maps": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -45,6 +44,7 @@
     "firebase": "^11.8.1",
     "genkit": "^1.8.0",
     "lucide-react": "^0.475.0",
+    "mapbox-gl": "^3.5.1",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
@@ -57,7 +57,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/google.maps": "^3.55.11",
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
